--- a/FunctionalExtentions/FunctionalExtentions.Core.csproj
+++ b/FunctionalExtentions/FunctionalExtentions.Core.csproj
@@ -40,9 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExceptionConverter.cs" />
-    <Compile Include="ExceptionHelper.cs" />
+    <Compile Include="Currying\CurryHelper.cs" />
+    <Compile Include="Optional.cs" />
+    <Compile Include="OptionalCastException.cs" />
+    <Compile Include="TreeNode.cs" />
+    <Compile Include="UnsafeHandler\ExceptionTransformer.cs" />
+    <Compile Include="UnsafeHandler\ExceptionHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnsafeHandler\InvalidTransformerException.cs" />
+    <Compile Include="UnWrap\KeyNotFoundInStorageException.cs" />
+    <Compile Include="UnWrap\Let.cs" />
+    <Compile Include="UnWrap\PersistantStorage.cs" />
+    <Compile Include="UnWrap\Scope.cs" />
+    <Compile Include="UnWrap\StorageValueIsNotApplicableForTargetTypeException.cs" />
+    <Compile Include="UnWrap\UnwrapExperssion.cs" />
+    <Compile Include="UnWrap\ValueNotFoundException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
@@ -50,6 +62,7 @@
       <Name>FunctionalExtentions.Abstract</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
