Refactor optional class. Start implementing optional collection extentions.

--- a/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
+++ b/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExceptionTransformation\ITransformer.cs" />
+    <Compile Include="IOptional.cs" />
+    <Compile Include="OptionalCollections\IOptionalCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
