--- a/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
+++ b/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="CurryHelperTest.cs" />
     <Compile Include="ExceptionHelperTest.cs" />
+    <Compile Include="OptionalCollectionTest.cs" />
+    <Compile Include="OptionalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScopeTest.cs" />
   </ItemGroup>
