--- a/FunctionalExtentions/FunctionalExtentions.Core.csproj
+++ b/FunctionalExtentions/FunctionalExtentions.Core.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnsafeHandler\InvalidTransformerException.cs" />
     <Compile Include="Unwrap\KeyNotFoundInStorageException.cs" />
-    <Compile Include="Unwrap\Let.cs" />
+    <Compile Include="Unwrap\SafePerfomer.cs" />
     <Compile Include="Unwrap\PersistantStorage.cs" />
     <Compile Include="Unwrap\Scope.cs" />
     <Compile Include="Unwrap\StorageValueIsNotApplicableForTargetTypeException.cs" />
