Add fixes to optional collection and optional collection extentions.

--- a/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
+++ b/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ExceptionTransformation\ITransformer.cs" />
     <Compile Include="IOptional.cs" />
     <Compile Include="OptionalCollections\IOptionalCollection.cs" />
+    <Compile Include="OptionalCollections\IOptionalCollectionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
