--- a/FunctionalExtentions/FunctionalExtentions.Core.csproj
+++ b/FunctionalExtentions/FunctionalExtentions.Core.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\EmptyCollectionHelper.cs" />
     <Compile Include="Collections\OptionalCollection.cs" />
     <Compile Include="Collections\OptionalCollectionsExtentions.cs" />
+    <Compile Include="Collections\OptionalCollectionWrapException.cs" />
     <Compile Include="Currying\CurryHelper.cs" />
     <Compile Include="Optional.cs" />
     <Compile Include="OptionalCastException.cs" />
