--- a/FunctionalExtentions/FunctionalExtentions.Core.csproj
+++ b/FunctionalExtentions/FunctionalExtentions.Core.csproj
@@ -51,8 +51,13 @@
     <Compile Include="Collections\OptionalCollectionWrapException.cs" />
     <Compile Include="Currying\CurryHelper.cs" />
     <Compile Include="Activator\DynamicActivator.cs" />
+    <Compile Include="DuckTyping\Ducker.cs" />
     <Compile Include="Optional.cs" />
     <Compile Include="OptionalCastException.cs" />
+    <Compile Include="Proxying\ConstructedType.cs" />
+    <Compile Include="Proxying\Proxy.cs" />
+    <Compile Include="Proxying\EmitContext.cs" />
+    <Compile Include="Proxying\TypeEmitter.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="UnsafeHandler\ExceptionTransformer.cs" />
     <Compile Include="UnsafeHandler\ExceptionHelper.cs" />
