--- a/FunctionalExtentions.ValueDataStructures/FunctionalExtentions.ValueDataStructures.csproj
+++ b/FunctionalExtentions.ValueDataStructures/FunctionalExtentions.ValueDataStructures.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0989D485-D6AE-4049-912F-6CE2E83012E7}</ProjectGuid>
+    <ProjectGuid>{5E6AD41F-B803-4473-9CD9-0CB6B79E2CBC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalExtentions.Abstract</RootNamespace>
-    <AssemblyName>FunctionalExtentions.Abstract</AssemblyName>
+    <RootNamespace>FunctionalExtentions.ValueDataStructures</RootNamespace>
+    <AssemblyName>FunctionalExtentions.ValueDataStructures</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExceptionTransformation\ITransformer.cs" />
-    <Compile Include="ICloneable.cs" />
-    <Compile Include="IOptional.cs" />
-    <Compile Include="OptionalCollections\IOptionalCollection.cs" />
-    <Compile Include="OptionalCollections\IOptionalCollectionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueCollections\IStack.cs" />
-    <Compile Include="ValueCollections\IValueCollection.cs" />
+    <Compile Include="Stack.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
+      <Project>{0989D485-D6AE-4049-912F-6CE2E83012E7}</Project>
+      <Name>FunctionalExtentions.Abstract</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
