--- a/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
+++ b/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
@@ -46,6 +46,7 @@
     <Compile Include="OptionalCollections\IOptionalCollection.cs" />
     <Compile Include="OptionalCollections\IOptionalCollectionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValueCollections\IValueList.cs" />
     <Compile Include="ValueCollections\IStack.cs" />
     <Compile Include="ValueCollections\IValueCollection.cs" />
   </ItemGroup>
