--- a/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
+++ b/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E6AD41F-B803-4473-9CD9-0CB6B79E2CBC}</ProjectGuid>
+    <ProjectGuid>{A851CF74-8D0D-4947-80CC-C59C83C28E4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalExtentions.ValueDataStructures</RootNamespace>
-    <AssemblyName>FunctionalExtentions.ValueDataStructures</AssemblyName>
+    <RootNamespace>FunctionalExtentions.ValueCollections</RootNamespace>
+    <AssemblyName>FunctionalExtentions.ValueCollections</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stack.cs" />
+    <Compile Include="Queues\Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
       <Project>{0989D485-D6AE-4049-912F-6CE2E83012E7}</Project>
       <Name>FunctionalExtentions.Abstract</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lists\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
