--- a/FunctionalExtentions/FunctionalExtentions.Core.csproj
+++ b/FunctionalExtentions/FunctionalExtentions.Core.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{98C6124C-D894-47B3-BD6A-7DA401A5603F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalExtentions</RootNamespace>
+    <RootNamespace>FunctionalExtentions.Core</RootNamespace>
     <AssemblyName>FunctionalExtentions</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
