--- a/FunctionalExtentions.Proxying/FunctionalExtentions.Proxying.csproj
+++ b/FunctionalExtentions.Proxying/FunctionalExtentions.Proxying.csproj
@@ -40,15 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Compability\Comparers\CompabilityComparerBase.cs" />
-    <Compile Include="Compability\Comparers\ICompabilityComparer.cs" />
-    <Compile Include="Compability\Comparers\GeneralCompabilityComparer.cs" />
+    <Compile Include="Compability\Comparers\CompatibilityComparerBase.cs" />
+    <Compile Include="Compability\Comparers\FieldCompatibilityComparer.cs" />
+    <Compile Include="Compability\Comparers\ICompatibilityComparer.cs" />
+    <Compile Include="Compability\Comparers\GeneralCompatibilityComparer.cs" />
+    <Compile Include="Compability\Comparers\PropertyCompatibilityComparer.cs" />
+    <Compile Include="Enums\Modifiers.cs" />
+    <Compile Include="Enums\PropertyAccessors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Compability\Checkers\ClassCompabilityChecker.cs" />
     <Compile Include="Compability\Checkers\EnumCompabilityChecker.cs" />
     <Compile Include="Compability\Checkers\StructCompabilityChecker.cs" />
     <Compile Include="Compability\Checkers\TypeCompabilityChecker.cs" />
-    <Compile Include="ConstructedType.cs" />
+    <Compile Include="Enums\ConstructedType.cs" />
     <Compile Include="EmitContext.cs" />
     <Compile Include="Proxy.cs" />
     <Compile Include="TypeEmitter.cs" />
