--- a/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
+++ b/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Activator\DynamicActivatorTest.cs" />
     <Compile Include="CollectionExtentionsTest.cs" />
     <Compile Include="CurryHelperTest.cs" />
     <Compile Include="ExceptionHelperTest.cs" />
