Added Insertion sort. Add simple test for insertion and selection sort algorithms.

--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CastHelperDummyes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortingAlgorithmsTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
