--- a/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
+++ b/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queues\Stack.cs" />
     <Compile Include="Sorting\InsertionSortAlgorithm.cs" />
+    <Compile Include="Sorting\MergeSortAlgorithm.cs" />
     <Compile Include="Sorting\SelectionSortAlgorithm.cs" />
     <Compile Include="Sorting\SortDirection.cs" />
     <Compile Include="Sorting\SortingAlgorithm.cs" />
