--- a/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
+++ b/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Helpers\ExtendCollectionInfo.cs" />
     <Compile Include="Lists\ArrayList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queues\Deque.cs" />
     <Compile Include="Queues\Stack.cs" />
     <Compile Include="Sorting\BubbleSortAlgorithm.cs" />
     <Compile Include="Sorting\InsertionSortAlgorithm.cs" />
