Finished first MethodCompatibility comparer. Moved ICompatibilityComparer interface to root folder of the project.

--- a/FunctionalExtentions.Proxying/FunctionalExtentions.Proxying.csproj
+++ b/FunctionalExtentions.Proxying/FunctionalExtentions.Proxying.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="Compability\Comparers\CompatibilityComparerBase.cs" />
     <Compile Include="Compability\Comparers\FieldCompatibilityComparer.cs" />
-    <Compile Include="Compability\Comparers\ICompatibilityComparer.cs" />
+    <Compile Include="ICompatibilityComparer.cs" />
     <Compile Include="Compability\Comparers\GeneralCompatibilityComparer.cs" />
     <Compile Include="Compability\Comparers\MethodCompatibilityComparer.cs" />
     <Compile Include="Compability\Comparers\PropertyCompatibilityComparer.cs" />
