--- a/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
+++ b/FunctionalExtentions.Abstract/FunctionalExtentions.Abstract.csproj
@@ -47,6 +47,7 @@
     <Compile Include="OptionalCollections\IOptionalCollectionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueCollections\IDeque.cs" />
+    <Compile Include="ValueCollections\IQueue.cs" />
     <Compile Include="ValueCollections\IValueList.cs" />
     <Compile Include="ValueCollections\IStack.cs" />
     <Compile Include="ValueCollections\IValueCollection.cs" />
