Moved RedBlackTreeNode to separate class.

--- a/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
+++ b/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Sorting\SortDirection.cs" />
     <Compile Include="Sorting\SortingAlgorithm.cs" />
     <Compile Include="Trees\RedBlackTree.cs" />
+    <Compile Include="Trees\RedBlackTreeNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
