--- a/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
+++ b/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="OptionalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScopeTest.cs" />
+    <Compile Include="ValueCollections\BinaryTreeTest.cs" />
     <Compile Include="ValueCollections\DequeTest.cs" />
     <Compile Include="ValueCollections\StackTest.cs" />
   </ItemGroup>
