--- a/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
+++ b/FunctionalExtentions.ValueCollections/FunctionalExtentions.ValueCollections.csproj
@@ -46,8 +46,8 @@
     <Compile Include="Lists\ArrayList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queues\Deque.cs" />
-    <Compile Include="Queues\Queue.cs" />
-    <Compile Include="Queues\Stack.cs" />
+    <Compile Include="Queues\ValueQueue.cs" />
+    <Compile Include="Queues\ValueStack.cs" />
     <Compile Include="Sorting\BubbleSortAlgorithm.cs" />
     <Compile Include="Sorting\InsertionSortAlgorithm.cs" />
     <Compile Include="Sorting\IterativeMergeSortAlgorithm.cs" />
