--- a/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
+++ b/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
@@ -74,9 +74,9 @@
       <Project>{0989D485-D6AE-4049-912F-6CE2E83012E7}</Project>
       <Name>FunctionalExtentions.Abstract</Name>
     </ProjectReference>
-    <ProjectReference Include="..\FunctionalExtentions.ValueCollections\FunctionalExtentions.ValueCollections.csproj">
+    <ProjectReference Include="..\FunctionalExtentions.ValueCollections\FunctionalExtentions.Collections.csproj">
       <Project>{a851cf74-8d0d-4947-80cc-c59c83c28e4f}</Project>
-      <Name>FunctionalExtentions.ValueCollections</Name>
+      <Name>FunctionalExtentions.Collections</Name>
     </ProjectReference>
     <ProjectReference Include="..\FunctionalExtentions\FunctionalExtentions.Core.csproj">
       <Project>{98C6124C-D894-47B3-BD6A-7DA401A5603F}</Project>
