Changed collections inheritance hierarchy. Refactored code for better reusing. Added base class for ValueCollections - ValueCollectionBase.

--- a/FunctionalExtentions.ValueCollections/FunctionalExtentions.Collections.csproj
+++ b/FunctionalExtentions.ValueCollections/FunctionalExtentions.Collections.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Trees\BinarySearchTree.cs" />
     <Compile Include="Trees\RedBlackTree.cs" />
     <Compile Include="Trees\RedBlackTreeNode.cs" />
+    <Compile Include="ValueCollectionBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
