--- a/FunctionalExtentions.Dependencies/FunctionalExtentions.Dependencies.csproj
+++ b/FunctionalExtentions.Dependencies/FunctionalExtentions.Dependencies.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A851CF74-8D0D-4947-80CC-C59C83C28E4F}</ProjectGuid>
+    <ProjectGuid>{FE7C58B0-325D-492D-90DF-224FEC8C7C07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalExtentions.Collections</RootNamespace>
-    <AssemblyName>FunctionalExtentions.Collections</AssemblyName>
+    <RootNamespace>FunctionalExtentions.Dependencies</RootNamespace>
+    <AssemblyName>FunctionalExtentions.Dependencies</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -41,41 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\CollectionArrayHelper.cs" />
-    <Compile Include="Helpers\CollectionExtensions.cs" />
-    <Compile Include="Helpers\ExtendCollectionInfo.cs" />
-    <Compile Include="Lists\ArrayList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queues\Deque.cs" />
-    <Compile Include="Queues\ValueQueue.cs" />
-    <Compile Include="Queues\ValueStack.cs" />
-    <Compile Include="Sorting\BubbleSortAlgorithm.cs" />
-    <Compile Include="Sorting\InsertionSortAlgorithm.cs" />
-    <Compile Include="Sorting\IterativeMergeSortAlgorithm.cs" />
-    <Compile Include="Sorting\MergeSortAlgorithm.cs" />
-    <Compile Include="Sorting\SelectionSortAlgorithm.cs" />
-    <Compile Include="Sorting\SortDirection.cs" />
-    <Compile Include="Sorting\SortingAlgorithm.cs" />
-    <Compile Include="Trees\BinarySearchTree.cs" />
-    <Compile Include="Trees\RedBlackTree.cs" />
-    <Compile Include="Trees\RedBlackTreeNode.cs" />
-    <Compile Include="ValueCollectionBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
-      <Project>{0989D485-D6AE-4049-912F-6CE2E83012E7}</Project>
+      <Project>{0989d485-d6ae-4049-912f-6ce2e83012e7}</Project>
       <Name>FunctionalExtentions.Abstract</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sets\" />
+    <ProjectReference Include="..\FunctionalExtentions\FunctionalExtentions.Core.csproj">
+      <Project>{98c6124c-d894-47b3-bd6a-7da401a5603f}</Project>
+      <Name>FunctionalExtentions.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
