--- a/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
+++ b/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Activator\DynamicActivatorTest.cs" />
     <Compile Include="CollectionExtentionsTest.cs" />
     <Compile Include="CurryHelperTest.cs" />
+    <Compile Include="Dependencies\DependencyTest.cs" />
     <Compile Include="ExceptionHelperTest.cs" />
     <Compile Include="OptionalCollectionTest.cs" />
     <Compile Include="OptionalTest.cs" />
@@ -74,6 +75,10 @@
     <ProjectReference Include="..\FunctionalExtentions.Abstract\FunctionalExtentions.Abstract.csproj">
       <Project>{0989D485-D6AE-4049-912F-6CE2E83012E7}</Project>
       <Name>FunctionalExtentions.Abstract</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FunctionalExtentions.Dependencies\FunctionalExtentions.Dependencies.csproj">
+      <Project>{fe7c58b0-325d-492d-90df-224fec8c7c07}</Project>
+      <Name>FunctionalExtentions.Dependencies</Name>
     </ProjectReference>
     <ProjectReference Include="..\FunctionalExtentions.ValueCollections\FunctionalExtentions.Collections.csproj">
       <Project>{a851cf74-8d0d-4947-80cc-c59c83c28e4f}</Project>
