Rearranged project structure. Added draft dependency cycle detection. Added simple ability to submit changes to graph builder class.

--- a/FunctionalExtentions.Dependencies/FunctionalExtentions.Dependencies.csproj
+++ b/FunctionalExtentions.Dependencies/FunctionalExtentions.Dependencies.csproj
@@ -42,11 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builders\DependencyBuilder.cs" />
-    <Compile Include="DependencyKey.cs" />
-    <Compile Include="DependencyLink.cs" />
-    <Compile Include="DependencyValue.cs" />
+    <Compile Include="Graph\DependencyKey.cs" />
+    <Compile Include="Graph\DependencyLink.cs" />
+    <Compile Include="Graph\DependencyOptions.cs" />
+    <Compile Include="Graph\DependencyValue.cs" />
     <Compile Include="Builders\DependencyGraphBuilder.cs" />
-    <Compile Include="DependencyGraph.cs" />
+    <Compile Include="Graph\DependencyGraph.cs" />
     <Compile Include="Interfaces\IDependencyValue.cs" />
     <Compile Include="Interfaces\IDependencyHolder.cs" />
     <Compile Include="MyClass.cs" />
