--- a/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
+++ b/FunctionalExtentions.Tests/FunctionalExtentions.Tests.csproj
@@ -59,11 +59,13 @@
     <Compile Include="CollectionExtentionsTest.cs" />
     <Compile Include="CurryHelperTest.cs" />
     <Compile Include="Dummies\Comparison\EqualFields.cs" />
+    <Compile Include="Dummies\Comparison\Methods.cs" />
     <Compile Include="ExceptionHelperTest.cs" />
     <Compile Include="OptionalCollectionTest.cs" />
     <Compile Include="OptionalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxying\Comparison\FieldComparerTest.cs" />
+    <Compile Include="Proxying\Comparison\MethodComparerTest.cs" />
     <Compile Include="ScopeTest.cs" />
     <Compile Include="ValueCollections\BinaryTreeTest.cs" />
     <Compile Include="ValueCollections\DequeTest.cs" />
